# vp_full_agents

./: .gitignore  AGENTS.md  CLOUD_AGENT_SDK.md  README.md  VP_OPTIMIZATION_DISCUSSION.txt  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: extractor.md  resolver.md  verifier.md
.claude/skills/vp-disambiguation/: SKILL.md
.claude/skills/vp-extraction/: SKILL.md
.claude/skills/vp-extraction/references/: predicate-cases.md  time-token-cases.md
.claude/skills/vp-golden-examples/: SKILL.md
.claude/skills/vp-golden-examples/references/: golden-patterns.md
.claude/skills/vp-metrics-comparison/: SKILL.md
.claude/skills/vp-metrics-comparison/agents/: openai.yaml
.claude/skills/vp-rendering-rules/: SKILL.md
.claude/skills/vp-table-routing/: SKILL.md
.claude/skills/vp-variant-selection/: SKILL.md
scripts/: analyze_langfuse_variant_pair.py  build_vp_processing_guide.py  compare_vp_variants.py  consolidate_omantel_regression.py  consolidate_optimized_regression.py  eval_agentic.py  eval_golden.py  export_langfuse_traces.py  rerun_omantel_post_reset.py  run_api.sh  setup_dev.sh  smoke_sdk.py
tests/: test_core_tools.py
tests/fixtures/: variant3_agentic.csv
vp_agent/: __init__.py  api.py  cli.py  config.py  console_trace.py  data.py  domain_config.py  golden.py  hooks.py  observability.py  orchestrator.py  schemas.py  server.py  text.py  trace.py
vp_agent/tools/: __init__.py  memory.py  normalize.py  plan.py  render.py  retrieval_index.py  retrieve.py  retrieve_vps.py  router.py  seed.py  shelf.py  validate.py
(+4 files in other folders)
